fixing css spacing of cards

--- a/client/Components/GameBoard/PlayerBoard.scss
+++ b/client/Components/GameBoard/PlayerBoard.scss
@@ -27,7 +27,7 @@
 }
 
 .player-board{
-    &.card-wrapper{
+    .card-wrapper{
         margin-right: 10px;
         margin-bottom: 5px;
 
